# ai-qa-university

./: .env.example  .gitignore  README.md  app.py  architecture.md  enhancement.md  log_config.py  main.py  my_tests.py  pyproject.toml  requirements.txt  university.db
agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tracing.py
database/: __init__.py  db.py  models.py  populate_db.py  seed.py
tests/: conftest.py
tests/agent/: conftest.py  test_graph.py  test_nodes.py  test_tracing.py
tests/database/: test_db.py
